data/derived/fa15/progs/unify/prog2176.ml.out
Characters 165-166:
  in go x
        ^
Error: This expression has type int -> int
       but an expression was expected of type int
